--- a/01. AJAX and jQuery Ajax/phonebook.html
+++ b/01. AJAX and jQuery Ajax/phonebook.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Phonebook</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </head>
 <body>
 <h1>Phonebook</h1>
@@ -14,6 +16,10 @@ Person: <input type="text" id="person" />
 Phone: <input type="text" id="phone" />
 <br>
 <button id="btnCreate">Create</button>
+<h2>Delete Phone</h2>
+Name: <input type="text" placeholder="Enter name" id="name">
+<br>
+<button id="btnDelete">Delete Contact</button>
 <script src="phonebook.js"></script>
 </body>
 </html>
