--- a/SeenIt/index.html
+++ b/SeenIt/index.html
@@ -10,28 +10,26 @@
     <link rel="stylesheet" href="style/notifications.css">
     <link rel="stylesheet" href="style/submit.css">
     <link rel="stylesheet" href="style/comments.css">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="node_modules/sammy/lib/sammy.js"></script>
-	<script src="node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
-    <script src="js/notify.js"></script>
-    <script src="js/remote.js"></script>
-    <script src="js/services/authService.js"></script>
-    <script src="js/services/postsService.js"></script>
-    <script src="js/services/commentService.js"></script>
-    <script src="js/app.js"></script>
+    <script src="node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
+    <script src="scripts/remote.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/postService.js"></script>
+    <script src="scripts/commentsServise.js"></script>
+    <script src="scripts/notifications.js"></script>
 </head>
 <body>
 
-<div id="container">
-
-</div>
+<div id="container"></div>
 
 <div id="notifications">
     <div id="loadingBox" class="notification"><span>Loading …</span></div>
     <div id="infoBox" class="notification"><span>Info</span></div>
     <div id="errorBox" class="notification"><span>Error</span></div>
 </div>
-
+<script src="scripts/app.js"></script>
 </body>
 </html>
